--- a/client/src/app/modules/quotation/components/affaire-list/affaire-list.component.html
+++ b/client/src/app/modules/quotation/components/affaire-list/affaire-list.component.html
@@ -13,3 +13,6 @@
     </sort-table>
   </div>
 </div>
+<button matTooltip="Corriger les affaires" mat-fab color="accent" class="fab-button" (click)="correctAffaire()">
+  <mat-icon>check</mat-icon>
+</button>
