added premium hub

--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -123,7 +123,7 @@
 
             <!-- Premium -->
             <li class="nav-item">
-              <a class="nav-link" href="#">
+              <a class="nav-link" (click)="openPremium($event)">
                 <img src="assets/images/premium-icon.svg" class="me-1" />Premium
               </a>
             </li>
