--- a/client-osiris/src/app/modules/main/components/analytic-statistic-widget/analytic-statistic-widget.component.html
+++ b/client-osiris/src/app/modules/main/components/analytic-statistic-widget/analytic-statistic-widget.component.html
@@ -2,8 +2,8 @@
   <div class="d-flex justify-content-between align-items-center">
     <div>
       <h3 class="mb-1">
-        {{ stat.count.prefix || '' }}<span [countUp]="stat.count.value"
-          [options]="{duration:2,decimalPlaces:2}">0</span>{{ stat.count.suffix || '' }}
+        {{ stat.analyticStatsValue.prefix || '' }}<span [countUp]="stat.analyticStatsValue.value"
+          [options]="{duration:2,decimalPlaces:2}">0</span>{{ stat.analyticStatsValue.suffix || '' }}
         <span class="fs-base" [class]="
                                   stat.isPositive ? 'text-success' : 'text-danger'
                                 ">
