--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -81,7 +81,7 @@
               <div class="col-md-12">
                 <div class="section-title-block d-flex">
                   <h3 class="section-widget-title">Le fil info</h3>
-                  <a href="category.html" class="text-uppercase section-title-link">
+                  <a href="post/last" class="text-uppercase section-title-link">
                     Voir tous
                     <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                       <path
@@ -271,7 +271,7 @@
                 <div class="col-md-12">
                   <div class="section-title-block d-flex">
                     <h3 class="section-widget-title">Les plus vus</h3>
-                    <a href="category.html" class="text-uppercase section-title-link">
+                    <a href="post/most-seen" class="text-uppercase section-title-link">
                       Voir tous
                       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
