add new Batch to save KpiCrmValue daily + new Kpi

--- a/client-osiris/src/app/modules/tiers/components/responsables-home-kpi/responsables-home-kpi.component.html
+++ b/client-osiris/src/app/modules/tiers/components/responsables-home-kpi/responsables-home-kpi.component.html
@@ -58,5 +58,12 @@
       </div>
       }
     </div>
+    <div class="row g-0">
+      @for (kpi of kpiLoaded; track $index) {
+      <div class="col">
+        <app-analytic-statistic-widget [osirisStat]="kpi" />
+      </div>
+      }
+    </div>
   </div>
 </div>
