--- a/client-osiris/src/app/modules/main/components/analytic-statistic-widget/analytic-statistic-widget.component.html
+++ b/client-osiris/src/app/modules/main/components/analytic-statistic-widget/analytic-statistic-widget.component.html
@@ -1,4 +1,5 @@
-<div class="p-3 rounded m-1 {{stat.id===1 ? '' : 'mt-xxl-0'}} border border-dashed" style="background-color: white;">
+<!-- <div *ngIf="stat.id" class="p-3 rounded m-1 {{stat.id===1 ? '' : 'mt-xxl-0'}} border border-dashed"
+  style="background-color: white;">
   <div class="d-flex justify-content-between align-items-center">
     <div>
       <h3 class="mb-1">
@@ -12,10 +13,22 @@
       </h3>
       <p class="mb-0 text-muted">{{ stat.title }}</p>
     </div>
-    <!-- <div class="avatar-xl">
+    <div class="avatar-xl">
       <span class="avatar-title text-bg-light rounded-circle">
         <ng-icon [name]="stat.icon" class="fs-2 text-muted d-flex" />
       </span>
-    </div> -->
+    </div>
+</div>
+</div> -->
+
+<div *ngIf="osirisStat && osirisStat.id&& osirisStat.analyticStatsValue" class="p-3 rounded m-1 border border-dashed"
+  style="background-color: white;">
+  <div class="d-flex justify-content-between align-items-center">
+    <div>
+      <h3 class="mb-1">
+        <span [countUp]="osirisStat.analyticStatsValue.value" [options]="{duration:2,decimalPlaces:2}">0</span>
+      </h3>
+      <p class="mb-0 text-muted">{{ osirisStat.title }}</p>
+    </div>
   </div>
 </div>
