--- a/client-osiris/src/app/modules/tiers/components/tiers-summary/tiers-summary.component.html
+++ b/client-osiris/src/app/modules/tiers/components/tiers-summary/tiers-summary.component.html
@@ -23,7 +23,7 @@
           <button ngbDropdownToggle class="btn btn-outline-primary" type="button">Appeler<ng-icon name="tablerPhone"
               class="align-top ms-1"></ng-icon></button>
           <div ngbDropdownMenu>
-            @for(phone of tiers.phones; track phone.id){
+            @for(phone of tiers.phones; track $index){
             <a ngbDropdownItem style="cursor: pointer;" (click)="call(phone)">{{phone.phoneNumber}}<ng-icon
                 name="tablerBrandTeams" class="align-top ms-3 fs-16"></ng-icon></a>
             }
