--- a/src/main/resources/mails/mjml/send-order-creation.mjml
+++ b/src/main/resources/mails/mjml/send-order-creation.mjml
@@ -6,24 +6,11 @@
       Bonjour <span th:text="${customerName}"></span>,
     </mj-text>
     <mj-text color="#666666" font-size="16px" line-height="24px">
-      Nous vous confirmons le traitement de votre commande n°<span th:text="${customerOrder.id}"></span>.
+      Nous vous confirmons la prise en compte de votre commande n°<span th:text="${customerOrder.id}"></span>.
     </mj-text>
 
     <mj-text color="#666666" font-size="16px" line-height="24px">Elle sera traitée dans les meilleurs délais par nos
       équipes.
-    </mj-text>
-    <mj-text color="#666666" font-size="16px" line-height="24px">Sauf avis contraire et immédiat de votre part, la
-      facture sera établie au nom de <span th:text="${invoiceLabelResult.billingLabel}"></span>
-      à l'adresse <span th:text="${invoiceLabelResult.billingLabelAddress}"></span>,
-      <span th:text="${invoiceLabelResult.billingLabelCity.label}"></span><span th:if="${mailComputeResultInvoice!=null}">, et
-        sera transmise à l'adresse suivante <span style="text-decoration:none"><span th:text="${mailComputeResultInvoice.recipientsMailTo[0].mail}"></span></span></span>
-      <span th:if="${mailComputeResultInvoice==null}">.
-        <strong>
-          Nous n'avons pas votre adresse mail de
-          transmission de la facture, merci de nous la
-          fournir.
-        </strong>
-      </span>
     </mj-text>
     <mj-text color="#666666" font-size="16px" line-height="24px">
       Pour suivre l'état de l'avancement de votre commande, cliquez simplement sur le bouton ci-dessous.
