--- a/src/main/resources/mails/mjml/billing-closure.mjml
+++ b/src/main/resources/mails/mjml/billing-closure.mjml
@@ -26,6 +26,6 @@
     </mj-text>
   </mj-column>
 </mj-section>
-<mj-head th:replace="~{fragments/cta(title='Accéder à mon relevé de compte', buttonText='Voir mon relevé',buttonUrl=${myJssEntryPoint+'/account/closure})}"></mj-head>
+<mj-head th:replace="~{fragments/cta(title='Accéder à mon relevé de compte', buttonText='Voir mon relevé',buttonUrl=${myJssEntryPoint+'/account/closure'})}"></mj-head>
 <mj-head th:replace="~{fragments/signature}"></mj-head>
 <mj-head th:replace="~{fragments/footer}"></mj-head>
