--- a/src/main/resources/mails/mjml/fragments/signature.mjml
+++ b/src/main/resources/mails/mjml/fragments/signature.mjml
@@ -7,10 +7,7 @@
     <mj-text align="center" color="#666666" font-size="16px">
       01 47 03 10 10 </mj-text>
     <mj-text align="center" color="#666666" font-size="16px">
-      <a th:href="@{'mailto:' + ${replyToEmployee.mail}}" style="color: inherit; text-decoration: none;">
-        <span th:text="${replyToEmployee.mail}"></span>
-      </a>
-      </a>
+      <a th:href="@{'mailto:' + ${replyToEmployee.mail}}" style="color: inherit; text-decoration: none;"><span th:text="${replyToEmployee.mail}"></span></a>
     </mj-text>
   </mj-column>
 </mj-section>
