--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -714,8 +714,9 @@
       <div class="form-check mb-4 pe-2">
         <input class="form-check-input" type="checkbox" id="save-info2" [(ngModel)]="acceptTerms" name="acceptTerms"
           required>
-        <label class="form-check-label" for="save-info2">En cochant cette case, je reconnais avoir pris
-          connaissance et accepter les Conditions Générales de Vente (CGV) du site.
+        <label class="form-check-label" for="save-info2">En cochant cette case, je reconnais avoir pris connaissance et
+          accepter les Conditions Générales d’Utilisation (CGU) du site, disponible <span class="cgu-link"
+            (click)="$event" routerLink="/terms">ici</span>.
         </label>
       </div>
       <div class="row gx-1 gy-3 justify-content-between">
