--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -136,6 +136,10 @@
 
           <section class="pt-0" *ngIf="post">
             <div class="row">
+              <div>
+                <img *ngIf="post.media" class="rounded-2 mb-2 resize-featured-img"
+                  [src]="post.media.urlFull ? post.media.urlFull : ''">
+              </div>
               <!-- Main Content START -->
               <div class="mb-5">
                 <span [innerHTML]="post.contentText| trustHtml"></span>
