fix modal CGV for new user first connection

--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -165,7 +165,7 @@
   <ng-template #acceptTermsModal let-modal>
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="confirmBackModalLabel">Conditions générales d'utilisation</h5>
+        <h5 class="modal-title" id="acceptTermsModal">Conditions générales d'utilisation</h5>
         <button type="button" class="btn-close" (click)="cancelAcceptation();modal.dismiss()"
           aria-label="Fermer"></button>
       </div>
